fix: section background not reaching page borders
Some sections (header, hero, quote and footer) should have a background
that covers the page horizontally. However, this was not being achieved
because of how the HTML was structured.

Now, each section is a div block (so it renders with normal flow) that
has `display: flex` and contains only one flex element: a div that has
the content for the section (and has a specific css class applied).
This way, the `section` parent is the one with the background, centers
the child, and sets the child size.

--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,25 @@
 
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.section:has(> .header), .section:has(> .hero), .section:has(> .footer) {
+  background-color: var(--color-black);
+  color: var(--color-white);
+}
+
+.section:has(> .quote) {
+  background-color: var(--color-gray);
+  color: var(--color-black);
+}
+
 .section {
+  display: flex;
+  justify-content: center;
+}
+
+.section > div {
   width: 1000px;
   display: flex;
   justify-content: center;
@@ -34,11 +45,6 @@ body {
 
 .hero, .info, .quote, .call-to-action {
   padding: 60px 0;
-}
-
-.header, .hero, .footer {
-  background-color: var(--color-black);
-  color: var(--color-white);
 }
 
 .header {
@@ -102,12 +108,8 @@ body {
 }
 
 .quote {
-  display: flex;
   flex-direction: column;
-  align-items: center;
-
-  background-color: var(--color-gray);
-  color: var(--color-black);
+  align-items: center;  
 }
 
 .quote p:nth-child(1) {
